5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1595_825.log
== TEST (2019-03-24 18:18:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura do raio a partir do teclado:
r = float(input("Insira o valor para o raio do circulo: "))

 #Calculo da area do circulo:
area = pi*r**2
print(area)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = pi*r**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:23:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura do raio a partir do teclado:
r = float(input("Insira o valor para o raio do circulo: "))

 #Calculo da area do circulo:
from math import pi
	area = pi*r**2
print(area)

-- ERROR:
File "XXXX", line 10
    area = pi*r**2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:24:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura do raio a partir do teclado:
r = float(input("Insira o valor para o raio do circulo: "))

 #Calculo da area do circulo:
from math import pi
area = pi*(r**2)
print(area)

-- OUTPUT:
63.61725123519331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:29:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura do raio a partir do teclado:
r = float(input("Insira o valor para o raio do circulo: "))

# Calculo da area do circulo:
from math import pi
area = pi*(r**2)
print(round(area, 3))

# Calculo do volume do circulo:
volume = 4/3pi*(r**3)
print(round(volume, 3))
-- ERROR:
File "XXXX", line 14
    volume = 4/3pi*(r**3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:29:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura do raio a partir do teclado:
r = float(input("Insira o valor para o raio do circulo: "))

# Calculo da area do circulo:
from math import pi
area = pi*(r**2)
print(round(area, 3))

# Calculo do volume do circulo:
volume = 4/3*pi*(r**3)
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:30:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

# Leitura do raio a partir do teclado:
r = float(input("Insira o valor para o raio do circulo: "))

# Calculo da area do circulo:
from math import pi
area = pi*(r**2)
print(round(area, 3))

# Calculo do volume do circulo:
volume = 4/3*pi*(r**3)
print(round(volume, 3))
-- EXECUTION TIME:
0.164145
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
